# Federated_YOLO_training-

./: README.md  pyproject.toml
LogsOfTrainingAndResults/: Plotting the output.py  Plotting_the_output.py  ReadMe  Untitled spreadsheet (4).xlsx  generate_plots.py  rq1_recall_data.xlsx
LogsOfTrainingAndResults/16hseed/: run_tests.sh
LogsOfTrainingAndResults/16rseed/: run_tests.sh
LogsOfTrainingAndResults/2seed/: run_tests.sh
LogsOfTrainingAndResults/4hseed/: run_tests.sh
LogsOfTrainingAndResults/4rseed/: run_tests.sh
LogsOfTrainingAndResults/8hseed/: run_tests.sh
LogsOfTrainingAndResults/8rseed/: run_tests.sh
pytorchexample/: client_app.py  server_app.py  task.py
